// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CryptoJS --separate 1`] = `
[
  "// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import "./requests/CryptoJS.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]("CryptoJS");
}
",
  {
    "CryptoJS.js": "import "../libs/shim/crypto-js.js";

postman[Symbol.for("define")]({
  name: "CryptoJS",
  id: " ",
  method: "GET",
  address: "https://postman-echo.com/get",
  pre() {
    const MD5hash = CryptoJS.MD5("foo").toString();
  }
});
",
  },
]
`;

exports[`cheerio --separate 1`] = `
[
  "// Auto-generated by the postman-to-k6 converter

import "./libs/spo-gpo.js";
import "./libs/shim/core.js";
import "./requests/cheerio.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]("cheerio");
}
",
  {
    "cheerio.js": "import "../libs/shim/cheerio.js";

postman[Symbol.for("define")]({
  name: "cheerio",
  id: " ",
  method: "GET",
  address: "https://postman-echo.com/get",
  pre() {
    const responseHTML = cheerio(pm.response.text());
  }
});
",
  },
]
`;

exports[`lodash --separate 1`] = `
[
  "// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import "./requests/lodash.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]("lodash");
}
",
  {
    "lodash.js": "import "../libs/shim/lodash.js";

postman[Symbol.for("define")]({
  name: "lodash",
  id: " ",
  method: "GET",
  address: "https://postman-echo.com/get",
  pre() {
    _.each(pm.response.json(), item => {});
  }
});
",
  },
]
`;

exports[`moment --separate 1`] = `
[
  "// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import "./requests/moment.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]("moment");
}
",
  {
    "moment.js": "postman[Symbol.for("define")]({
  name: "moment",
  id: " ",
  method: "GET",
  address: "https://postman-echo.com/get",
  pre() {
    let moment = require("moment");
    const momentJS = moment("2021-08-15")
      .add(1, "days")
      .format("DD.MM.YYYY");
  }
});
",
  },
]
`;

exports[`xml2json --separate 1`] = `
[
  "// Auto-generated by the postman-to-k6 converter

import "./libs/spo-gpo.js";
import "./libs/shim/core.js";
import "./requests/xml2json.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]("xml2json");
}
",
  {
    "xml2json.js": "import "../libs/shim/xml2Json.js";

postman[Symbol.for("define")]({
  name: "xml2json",
  id: " ",
  method: "GET",
  address: "https://postman-echo.com/get",
  pre() {
    const json = xml2Json(<root>Text</root>);
  }
});
",
  },
]
`;
